--- a/projects/showcase/src/app/app.component.html
+++ b/projects/showcase/src/app/app.component.html
@@ -296,7 +296,7 @@
 </style>
 
 <!-- Toolbar -->
-<div class="toolbar" role="banner" [(banana)]="value">
+<div class="toolbar" role="banner">
   <img
     width="40"
     alt="Angular Logo"
